Closed
Bug 218203
Opened 22 years ago
Closed 22 years ago
Crash when trying to show prompt from onunload
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: chpe, Assigned: blizzard)
Details
(Keywords: crash, testcase)
Attachments
(2 files)
|
60 bytes,
text/html
|
Details | |
|
728 bytes,
patch
|
bryner
:
review+
blizzard
:
superreview+
asa
:
approval1.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.0.1) Gecko/20020823 Netscape/7.0
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; de-AT; rv:1.5b) Gecko/20030825
The attached testcase tries to show an alert in onUnload. However, in epiphany,
galeon and TestGtkEmbed it crashes instead in
GtkPromptService::GetGtkWindowForDOMWindow() on this line:
siteWindow->GetSiteWindow((void**)&parentWidget);
because siteWindow is null.
Note that this is not the same bug as bug 211834 .
Reproducible: Always
Steps to Reproduce:
1) Load attached test case.
2) Close browser window or tab.
Actual Results:
Crash.
Expected Results:
onunload alert is shown.
| Reporter | ||
Comment 1•22 years ago
|
||
| Reporter | ||
Comment 2•22 years ago
|
||
Updated•22 years ago
|
| Reporter | ||
Updated•22 years ago
|
Attachment #130847 -
Flags: superreview?(blizzard)
Attachment #130847 -
Flags: review?(bryner)
| Assignee | ||
Updated•22 years ago
|
Attachment #130847 -
Flags: superreview?(blizzard) → superreview+
Updated•22 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•22 years ago
|
Attachment #130847 -
Flags: review?(bryner) → review+
| Reporter | ||
Comment 3•22 years ago
|
||
Comment on attachment 130847 [details] [diff] [review]
proposed fix
This is an important issue for embed. The patch is a simple NULL check that
fixes a crasher, so I think there's no risk at all.
Attachment #130847 -
Flags: approval1.5?
Comment 4•22 years ago
|
||
Comment on attachment 130847 [details] [diff] [review]
proposed fix
a=asa (on behalf of drivers) for checkin to Mozilla 1.5
Attachment #130847 -
Flags: approval1.5? → approval1.5+
Comment 5•22 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•