Bug 218203 Crash when trying to show prompt from onunload p=chpe+mozbugz@stud.uni-saarland.de r=bryner sr=blizzard a=asa